--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>sasa</title>
 </head>
 <body>
-    <h1>src dışındaki index.html</h1>
+    <h1>burası domainin yönleneceği ilk sayfa olacak</h1>
 </body>
 </html>
