flow page structure

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     </div>
     
 
-    <script src="src\login\loginPage.js"></script>
+    <script src="src/login/loginPage.js"></script>
 </body>
 </html>
