--- a/src/flow/flowPage.html
+++ b/src/flow/flowPage.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sozluku</title>
+    <link rel="stylesheet" href="flowPage.css">
 </head>
 <body>
-    <h3>içerikler burada</h3>
-</body>
+    <nav>
+        <ul class="navbar">
+            <li class="navbar-li"><a class="active" href="#home">Home</a></li>
+            <li class="navbar-li"><a href="https://www.google.com/">News</a></li>
+            <li class="navbar-li"><a href="#contact">Contact</a></li>
+            <li class="navbar-li"><a href="#about">About</a></li>
+          </ul>
+    </nav>
+
+    <div class="container">
+      <div class="left-block">
+        <h2>Topics</h2>
+        <ul>
+          <li><a href="#">Topic 1</a></li>
+          <li><a href="#">Topic 2</a></li>
+          <li><a href="#">Topic 3</a></li>
+          <li><a href="#">Topic 4</a></li>
+          <li><a href="#">Topic 5</a></li>
+        </ul>
+      </div>
+      <div class="middle-block">
+        <h2>Selected Topic</h2>
+        <div class="topic-content">
+          <!-- Content of the selected topic goes here -->
+        </div>
+      </div>
+      <div class="right-block">
+        <h2>Trends</h2>
+        <ul>
+          <li><a href="#">Trend 1</a></li>
+          <li><a href="#">Trend 2</a></li>
+          <li><a href="#">Trend 3</a></li>
+          <li><a href="#">Event 1</a></li>
+          <li><a href="#">Event 2</a></li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
