--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                     <a rel="noopener noreferrer" href="#">forgot password ?</a>
                 </div>
             </div>
+            <a href="src\flow\flowPage.html">  
+                test
+            </a>
+             <br>
             <button class="sign">sign in</button>
         </form>
         <div class="social-message">
