database eklmeye çalışiom hala

--- a/src/flow/flowPage.html
+++ b/src/flow/flowPage.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="left-block">
         <h2>topics</h2>
-        <button id="add-topic-btn">new topic</button>
+        <button id="add-topic-btn" action="">new topic</button>
         <ul id="topic-list">
           <!-- Existing topics will be added here -->
         </ul>
